# datum

./: .caliper.yaml  .caliperignore  .eagle-eyed-dom.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  AX-COMPARISON-PROMPT.md  CHANGELOG.md  CLAUDE.md  CODEX.md  COPILOT.md  CURRENT_STATE.md  Dockerfile  GEMINI.md  HORIZON.md  KIRO.md  PROPERTIES.md  README.md  ROADMAP.md  SKILL.md  TASKS.md  docker-compose.yml  install.sh  package-lock.json  package.json  pyproject.toml  test_install.sh  test_local_planning.py
datum-ax/: .eagle-eyed-dom.yaml  .gitignore  CLAUDE.md  CURRENT_STATE.md  README.md  WORKFLOW.md  langgraph.json  pyproject.toml  rebuild.sh
datum-ax/.agents/skills/nl-to-ticket/: INITIATIVE.template.md  SKILL.md
datum-ax/.agents/skills/product-team/: FRAMEWORK-MAP.md  README.md  SKILL.md
datum-ax/.agents/skills/product-team/shape/: SKILL.md
datum-ax/.langgraph_api/: .langgraph_ops.pckl
datum-ax/docs/: ARCHITECTURE.md  BUILD-INITIATIVE.md  GLOSSARY.md  PIPELINE.md  RESEARCH-NOTES.md
datum-ax/docs/adr/: 0001-asymmetric-topology.md  0002-langgraph-state-machine-and-checkpointer.md  0003-omlx-inference-and-model-roles.md  0004-context-firewall.md  0005-data-plane.md  0006-eedom-deterministic-review-gate.md  0007-verification-loop.md  0008-relationship-to-datum.md  0009-tokenomics-model-routing.md  0010-code-discipline-gates.md  0011-security-trust-boundary.md  0012-working-tree-topology.md  0013-observability-and-budgets.md  0014-failure-recovery-and-lifecycle.md  0015-onboarding-and-runtime-services.md  0016-properties-phase.md  0017-reflect-and-skeptic.md  0018-route-shapes.md  0019-gitnexus-code-graph-intelligence.md  0020-compound-engineering.md  0021-active-context-management-dcp.md  0022-context-budget-aware-lane-granularity.md  0023-github-issues-human-view.md  0024-nl-to-ticket-intake.md  0025-work-scale-hierarchy.md  0026-three-tier-enforced-boundaries.md  0027-dual-artifacts-md-and-json.md  0028-cli-and-api-surface.md  0029-live-status-snapshot.md  0030-context-crane-single-source.md  0031-pluggable-ledger-backend.md  0032-ports-and-adapters-everywhere.md  0033-persona-registry.md  0034-determinism-by-default.md  0035-subagent-harness-for-playbooks.md  0036-held-out-rule-promotion.md  0037-mechanistic-insight-narratives.md
datum-ax/docs/epics/e1-contracts/: TICKET.md
datum-ax/docs/epics/e2-inference/: lane-plan.md
datum-ax/docs/initiatives/beta-wiring/: PROPERTIES.md  TICKET.md  lane-plan.md
datum-ax/docs/initiatives/datum-ax-build/: INITIATIVE.md
datum-ax/docs/initiatives/integration-sweep/: GAP-LEDGER.md  TICKET.md  lane-plan.md
datum-ax/docs/initiatives/tic-tac-toe/: TICKET.md
datum-ax/persona-sources/: README.md  retriever.py
datum-ax/persona-sources/raw/: misc_uncategorized.md
datum-ax/personas/: BASE_PERSONA.md
datum-ax/personas/distilled/: AGENTIC_RESEARCH_WORKFLOW.md  AWS_INFRASTRUCTURE_ENGINEER.md  SWIFT_CLEAN_ARCHITECTURE.md  WEB_CLOUDFLARE_ENGINEER.md
datum-ax/personas/raw/: agent_frameworks.md  aws_cloud.md  cli_tui.md  swift_ecosystem.md  web_frontend.md
datum-ax/scripts/: ci.sh  install-hooks.sh  rebuild.sh
datum-ax/skills/nl-to-ticket/: INITIATIVE.template.md  SKILL.md  TICKET.template.md
datum-ax/skills/product-team/: BRIEF.template.md  README.md  RESEARCH-LEDGER.template.md  SKILL.md
datum-ax/skills/product-team/clarify/: SKILL.md
datum-ax/skills/product-team/research/: SKILL.md
datum-ax/skills/product-team/shape/: SKILL.md
datum-ax/skills/product-team/skeptic/: SKILL.md
datum-ax/src/datum_ax/: __init__.py  _base.py  observability.py  registry.py
datum-ax/src/datum_ax/cli/: __init__.py  main.py
datum-ax/src/datum_ax/contracts/: __init__.py  checkpoint.py  context.py  context_assembler.py  execution.py  inference.py  ledger.py  persona.py  projection.py  review.py  rules.py  status.py  tokens.py  worker.py
datum-ax/src/datum_ax/core/: __init__.py  utils.py
datum-ax/src/datum_ax/core/compound/: __init__.py  closeout.py  harvest.py
datum-ax/src/datum_ax/core/eedom/: __init__.py  adapter.py
datum-ax/src/datum_ax/core/orchestration/: __init__.py  assemblers.py  crane.py  graph.py  scheduler.py  state.py
datum-ax/src/datum_ax/core/planner/: __init__.py  dag.py  lane_plan.py  properties.py  triage.py
datum-ax/src/datum_ax/core/projection/: __init__.py  dag_projection.py
datum-ax/src/datum_ax/core/reviewer/: __init__.py  adversarial.py
datum-ax/src/datum_ax/core/verifier/: __init__.py  discipline.py  loop.py  synthesis.py
datum-ax/src/datum_ax/data/: __init__.py  _artifacts.py  tokenizers.py
datum-ax/src/datum_ax/data/context/: __init__.py  adapters.py  assembler.py  dcp.py
datum-ax/src/datum_ax/data/execution/: __init__.py  docker.py  errors.py  local.py  tart.py
datum-ax/src/datum_ax/data/inference/: __init__.py  client.py  errors.py  (+6 more)
datum-ax/src/datum_ax/personas/: BASE_PERSONA.md
datum-ax/src/datum_ax/presentation/: __init__.py  composition.py  studio.py
datum-ax/src/datum_ax/prompts/: green.md  lane-plan.md  red.md  triage.md
datum-ax/src/datum_ax/rules/: clean-architecture.md  tdd-red-first.md
datum-ax/src/datum_ax/schemas/: __init__.py  compound.py  projection.py  properties.py  rules.py  ticket.py  verification.py
datum-ax/tests/: fakes.py  strategies.py  test_adversarial.py  test_architecture.py  test_artifact_loading.py  test_artifacts.py  test_checkpoint.py  test_checkpoint_port.py  test_cli.py  test_closeout_harvest.py  test_compound.py  test_context_assembler_plugin.py  test_context_firewall.py  test_contracts_properties.py  test_crane_persona.py  test_crane_wiring.py  test_dag.py  test_discipline.py  test_eedom.py  test_execution_hosts.py  test_graph.py  test_inference_client.py  test_invariants.py  test_ledger.py  test_ledger_metering.py  test_ledger_port.py  test_loop.py  test_loop_compounds.py  test_observability.py  test_persona.py  test_persona_skills.py  test_postgres_ledger.py  test_projection.py  test_properties.py  test_protocols.py  test_redis_checkpoint.py  test_review_gate_port.py  test_rules.py  test_scheduler.py  test_semantic_persona.py  (+11 more)
(+854 files in other folders)
