[project]
name = "datum"
version = "2.0.0"
description = "DATUM V2 Agentic Production Line Orchestrator"
authors = [
    {name = "Gitrdun HQ"}
]
readme = "docs/DATUM.md"
requires-python = ">=3.12"

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
memory = [
    "mlx>=0.31.0",
    "mlx-lm>=0.31.0",
    "huggingface_hub>=1.16.0",
    "tokenizers>=0.22.0",
    "numpy>=2.0.0",
    "outlines>=1.3.0",
]

[project.scripts]
datum = "datum.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datum"]

