[project]
name = "datum"
version = "2.0.0"
description = "DATUM V2 Agentic Production Line Orchestrator"
authors = [
    {name = "Gitrdun HQ"}
]
readme = "docs/DATUM.md"
requires-python = ">=3.12"

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
memory = [
    "mlx>=0.31.0",
    "mlx-lm>=0.31.0",
    "huggingface_hub>=1.16.0",
    "tokenizers>=0.22.0",
    "numpy>=2.0.0",
    "outlines>=1.3.0",
]
# RAG/corpus retrieval deps (datum/memory): TF-IDF fallback + corpus SQL.
# Distinct from [memory], which is local-LLM (mlx/outlines) deps.
rag = [
    "duckdb>=1.0",
    "scikit-learn",
]

# eedom integration: optional, install via editable path from ../eedom.
# Not declared as a dependency since eedom is not on PyPI.
# The import is wrapped in try/except ImportError (graceful degradation).

[project.scripts]
datum = "datum.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datum", "scripts"]

[tool.hatch.build.targets.wheel.force-include]
"assets" = "assets"
"references" = "references"
"templates" = "templates"
"SKILL.md" = "SKILL.md"


[tool.pytest.ini_options]
testpaths = ["tests"]
