[project]
name = "datum"
version = "2.0.0"
description = "DATUM V2 Agentic Production Line Orchestrator"
authors = [
    {name = "Gitrdun HQ"}
]
readme = "docs/DATUM.md"
requires-python = ">=3.12"

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
memory = [
    "mlx>=0.31.0",
    "mlx-lm>=0.31.0",
    "huggingface_hub>=1.16.0",
    "tokenizers>=0.22.0",
    "numpy>=2.0.0",
    "outlines>=1.3.0",
    # transformers>=5.13 breaks mlx-lm 0.31.3's AutoTokenizer.register() call
    # at import time (str passed where a config class is now expected). No
    # upstream fix yet — datum.local_llm._patch_transformers_for_mlx_lm()
    # applies the workaround from
    # https://github.com/ml-explore/mlx-lm/issues/1458#issuecomment-4887373330
    # before every mlx_lm import, so no version cap is needed here.
    "transformers",
]
# RAG/corpus retrieval deps (datum/memory): TF-IDF fallback + corpus SQL.
# Distinct from [memory], which is local-LLM (mlx/outlines) deps.
rag = [
    "duckdb>=1.0",
    "scikit-learn",
]

# caliper integration: optional, install via editable path from ../caliper.
# Not declared as a dependency since caliper is not on PyPI.
# The import is wrapped in try/except ImportError (graceful degradation).

[project.scripts]
datum = "datum.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datum", "scripts"]

[tool.hatch.build.targets.wheel.force-include]
"assets" = "assets"
"references" = "references"
"templates" = "templates"
"SKILL.md" = "SKILL.md"


[tool.pytest.ini_options]
testpaths = ["tests"]
