[project]
name = "datum-ax"
version = "0.0.15"
description = "Asymmetric agentic language pipeline — typed contracts & schemas (E1)."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "langgraph>=1.2.6",
    "pydantic>=2.6",
]

[project.optional-dependencies]
inference = ["httpx>=0.27"]  # real oMLX transport (HttpxTransport); optional
mlx = ["mlx-lm>=0.14"]       # native Apple Silicon MLX transport

[project.scripts]
datumax = "datum_ax.cli.main:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datum_ax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aegra-cli>=0.1.0",
    "mypy>=1.10",
    "ruff>=0.9.0"
]
