[project]
name = "datum-ax"
version = "0.0.15"
description = "Asymmetric agentic language pipeline — typed contracts & schemas (E1)."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "langgraph>=1.2.6",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
inference = ["httpx>=0.27"]  # real oMLX transport (HttpxTransport); optional
mlx = ["mlx-lm>=0.14"]       # native Apple Silicon MLX transport
semantic = ["sentence-transformers>=2.2", "numpy>=1.24"]  # RAG persona/skill selection (ADR-0034)
tokenizer = ["tiktoken>=0.5"]  # exact token counting behind the TokenCounter port (ADR-0030)
database = ["psycopg[binary]>=3.1", "redis>=5.0"]  # centralized ledger (Postgres) + checkpoint (Redis/Valkey) (ADR-0031/0032)

[project.scripts]
datumax = "datum_ax.cli.main:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datum_ax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

# Optional centralized-backend drivers ([database] extra) — tolerate their absence at type-check time.
[[tool.mypy.overrides]]
module = ["psycopg.*", "redis.*", "fakeredis.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aegra-cli>=0.1.0",
    "mypy>=1.10",
    "ruff>=0.9.0",
    "hypothesis>=6.0",
    "fakeredis>=2.21"
]
