[project]
name = "datum-local"
version = "0.1.0"
description = "Local datum workspace — editable-path companion to the datum repo"
requires-python = ">=3.12"
dependencies = [
    "datum",
]

[tool.uv.sources]
datum = { path = "__DATUM_REPO_PATH__", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datum_local"]
